--- a/core/template/dashboard/cmd.action.slider.button.html
+++ b/core/template/dashboard/cmd.action.slider.button.html
@@ -21,7 +21,7 @@
       var max = ('#maxValue#' == '') ?  Number.MAX_VALUE : parseFloat('#maxValue#')
       var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
       if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) <= max - step ) {
-        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) + step})
+        jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) + step}])
         $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
       }
     })
@@ -30,7 +30,7 @@
       var min = ('#minValue#' == '') ? Number.MIN_VALUE : parseFloat('#minValue#')
       var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
       if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) >= min + step) {
-        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) - step})
+        jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) - step}])
         $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
       }
     })
@@ -44,9 +44,9 @@
       }, 1000)
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $('.cmd[data-cmd_uid=#uid#] .in_value').val(_options.display_value+' #unite#')
-    }
-    jeedom.cmd.update['#id#']({display_value: '#state#'})
+    });
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
