--- a/core/template/dashboard/cmd.action.slider.tmplimg.html
+++ b/core/template/dashboard/cmd.action.slider.tmplimg.html
@@ -49,7 +49,7 @@
       }
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
@@ -74,9 +74,9 @@
         style = 'max-width:#_desktop_width_#px !important;'
       }
       cmd.find('.imgCmd img').attr('style', style)
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     $('body').on('changeThemeEvent', function (event, theme) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
