--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -75,9 +75,9 @@
       jeedom.cmd.execute({id: '#id#', value: {slider: this.value}})
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $inputNumber#id#.val(_options.display_value).attr('value', _options.display_value).attr('aria-valuenow', _options.display_value)
       if ('#noslider#' != '1') mySlider#id#.set(_options.display_value)
-    }
+    });
   </script>
 </div>
