--- a/core/template/dashboard/cmd.info.numeric.rain.html
+++ b/core/template/dashboard/cmd.info.numeric.rain.html
@@ -31,7 +31,7 @@
     var cmd#id# = $('.cmd[data-cmd_id=#id#]')
     cmd#id#.find('.widget-rain-water').css('background', "url('data:image/svg+xml;base64," + waterSvg64#id# + "')")
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       cmd#id#.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
 
       var value_#id# = parseFloat(_options.display_value)
@@ -52,7 +52,7 @@
       if ('#showRange#' == '1') {
         cmd#id#.find('.plage').empty().append(minValue_#id# + ' | ' + maxValue_#id#)
       }
-    }
+    });
 
     if ($.issetWidgetOptParam('#scale#', 'scale')) {
       var rainContainer_#id# = cmd#id#.find('.widget-rain-container')
@@ -67,6 +67,6 @@
       cmd#id#.find('.plage').show()
     }
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
