--- a/core/template/dashboard/cmd.info.string.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistate.html
@@ -12,7 +12,7 @@
       <div>time : date ({{Affiche l'info time sous forme de date}})</div>
     </template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
@@ -48,9 +48,9 @@
         }
         cmd.find('.iconCmd img').attr('style',style)
       })
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     $('body').on('changeThemeEvent', function (event, theme) {
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
