--- a/core/template/mobile/cmd.action.select.default.html
+++ b/core/template/mobile/cmd.action.select.default.html
@@ -10,8 +10,8 @@
       jeedom.cmd.execute({id: '#id#', value: {select: $(this).value()}})
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $(".cmd[data-cmd_uid=#uid#] .selectCmd").val(_options.display_value)
-    }
+    });
   </script>
 </span>
