--- a/core/template/mobile/cmd.info.string.multiline.html
+++ b/core/template/mobile/cmd.info.string.multiline.html
@@ -3,7 +3,7 @@
     <span class="cmdName #hide_name#">#name_display#<br/></span><strong class="state" ></strong>
   </div>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','Date de valeur : '+_options.valueDate+'<br/>Date de collecte : '+_options.collectDate)
       cmd.find('.state').empty().append(_options.display_value+' #unite#')
@@ -20,9 +20,9 @@
           cmd.attr('data-alertlevel','none')
         }
       }
-    }
+    });
     
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
     
     if (!isNaN(parseInt('#maxHeight#'))) {
       $('.cmd[data-cmd_id=#id#]').css('max-height', parseInt('#maxHeight#')+'px')
