--- a/core/template/dashboard/cmd.action.color.default.html
+++ b/core/template/dashboard/cmd.action.color.default.html
@@ -4,13 +4,13 @@
   </div>
   <template></template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $('.cmd[data-cmd_uid=#uid#]:last .action_colorpicker_change').off('change')
       $('.cmd[data-cmd_uid=#uid#] .action_colorpicker_change').value((_options.display_value != '') ? _options.display_value.substr(0,7) : _options.display_value)
       $('.cmd[data-cmd_uid=#uid#]:last .action_colorpicker_change').on('change', function() {
         jeedom.cmd.execute({id: '#id#', value: {color: $(this).value()}});
       })
-    }
-    jeedom.cmd.update['#id#']({display_value: '#state#'})
+    });
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
