--- a/core/template/dashboard/cmd.action.select.default.html
+++ b/core/template/dashboard/cmd.action.select.default.html
@@ -11,10 +11,10 @@
       jeedom.cmd.execute({id: '#id#', value: {select: $(this).value()}})
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $(".cmd[data-cmd_uid=#uid#] .selectCmd").val(_options.display_value)
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
