--- a/core/template/dashboard/cmd.action.slider.sliderVertical.html
+++ b/core/template/dashboard/cmd.action.slider.sliderVertical.html
@@ -35,10 +35,10 @@
       jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       mySlider#id#.set(_options.display_value)
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value: '#state#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
