--- a/core/template/dashboard/cmd.action.slider.timeShutter.html
+++ b/core/template/dashboard/cmd.action.slider.timeShutter.html
@@ -53,7 +53,7 @@
       }
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       var cmd = $('.cmd[data-cmd_uid=#uid#]')
       jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
 
@@ -69,7 +69,7 @@
       cmd.find('.shuttergauge-value').height(height_#uid#+'%')
       cmd.find('.state strong').first().text(_options.display_value)
       mySlider#id#.set(position)
-    }
+    });
 
     $('.cmd[data-cmd_uid=#uid#] .shuttergauge-bckg').off().on('click', function() {
       shutterPos = $('.cmd[data-cmd_uid=#uid#] .state strong').first().html()
@@ -82,6 +82,6 @@
       }
     })
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
