--- a/core/template/dashboard/cmd.info.numeric.shutter.html
+++ b/core/template/dashboard/cmd.info.numeric.shutter.html
@@ -19,7 +19,7 @@
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
   </template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options){
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
@@ -28,9 +28,9 @@
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       cmd.find('.shuttergauge-value').height(height+'%')
       cmd.find('.state strong').first().text(_options.display_value+' '+_options.unit)
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',unit:'#unite#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     if ($.issetWidgetOptParam('#color#', 'color')) {
       $('.cmd[data-cmd_id=#id#]').find('div.shuttergauge-value').style('background', '#color#', 'important')
