--- a/core/template/dashboard/cmd.info.numeric.tile.html
+++ b/core/template/dashboard/cmd.info.numeric.tile.html
@@ -13,12 +13,12 @@
   </div>
   <template></template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       $('.cmd[data-cmd_id=#id#]').attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       $('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
       $('.cmd[data-cmd_id=#id#] .unit').empty().append(_options.unit)
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#',unit:'#unite#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
