--- a/core/template/dashboard/cmd.info.string.multiline.html
+++ b/core/template/dashboard/cmd.info.string.multiline.html
@@ -6,7 +6,7 @@
     <div>maxHeight : 20 ({{Hauteur maximale en pixel}}).</div>
   </template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       cmd.find('.state').empty().append(_options.display_value+' #unite#');
@@ -18,9 +18,9 @@
           cmd.addClass('label label-danger')
         }
       }
-    }
+    });
     
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
     
     if (!isNaN(parseInt('#maxHeight#'))) {
       $('.cmd[data-cmd_id=#id#]').css('max-height',parseInt('#maxHeight#')+'px')
