--- a/core/template/mobile/cmd.action.other.alert.html
+++ b/core/template/mobile/cmd.action.other.alert.html
@@ -4,7 +4,7 @@
     <span class="iconCmd cursor"></span>
   </center>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       if (_options.display_value == '1' || _options.display_value == 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
           $('.cmd[data-cmd_id=#id#]').hide()
@@ -20,8 +20,8 @@
           $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="far fa-bell-slash"></i>')
         }
       }
-    }
-    jeedom.cmd.update['#id#']({display_value: '#state#'})
+    });
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
       jeedom.cmd.execute({id: '#id#'})
