--- a/core/template/mobile/cmd.action.other.binaryDefault.html
+++ b/core/template/mobile/cmd.action.other.binaryDefault.html
@@ -3,7 +3,7 @@
     <span class="cursor iconCmd"></span>
   </center>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
           $('.cmd[data-cmd_id=#id#]').hide()
@@ -19,9 +19,9 @@
           $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="fas fa-times"></i>')
         }
       }
-    }
+    });
 
-    jeedom.cmd.update['#id#']({display_value:'#state#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
       jeedom.cmd.execute({id: '#id#'})
