--- a/core/template/mobile/cmd.action.slider.value.html
+++ b/core/template/mobile/cmd.action.slider.value.html
@@ -57,9 +57,9 @@
       }
     })
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       if ('#noslider#' != '1') $inputNumber#id#.val(_options.display_value)
       mySlider#id#.set(_options.display_value)
-    }
+    });
   </script>
 </div>
