--- a/core/template/mobile/cmd.info.numeric.line.html
+++ b/core/template/mobile/cmd.info.numeric.line.html
@@ -3,7 +3,7 @@
 		<span class="cmdName #hide_name#">#name_display#</span> <strong class="state"></strong><span class="unit">#unite#</span>
 	</center>
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options) {
+		 jeedom.cmd.addUpdateFunction('#id#',function(_options) {
 			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
 			$('.cmd[data-cmd_id=#id#] .unit').empty().append(_options.unit)
 			if (_options.alertLevel) {
@@ -14,8 +14,8 @@
 					$('.cmd[data-cmd_id=#id#]').css({"background-color":"#da2e37"})
 				}
 			}
-		}
+		});
 
-		jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#',unit:'#unite#'})
+		jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 	</script>
 </div>
