--- a/core/template/mobile/cmd.info.numeric.rain.html
+++ b/core/template/mobile/cmd.info.numeric.rain.html
@@ -22,7 +22,7 @@
     var cmd#id# = $('.cmd[data-cmd_id=#id#]')
     cmd#id#.find('.widget-rain-water').css('background', "url('data:image/svg+xml;base64," + waterSvg64#id# + "')")
 
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       cmd#id#.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+_options.unit)
       cmd#id#.find('.unit').empty().append(_options.unit);
 
@@ -44,7 +44,7 @@
       if ('#showRange#' == '1') {
         cmd#id#.find('.plage').empty().append(minValue_#id# + ' | ' + maxValue_#id#)
       }
-    }
+    });
 
     if ($.issetWidgetOptParam('#scale#', 'scale')) {
       var rainContainer_#id# = cmd#id#.find('.widget-rain-container')
@@ -59,6 +59,6 @@
       cmd#id#.find('.plage').show()
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#',unit:'#unite#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
