--- a/core/template/mobile/cmd.info.string.default.html
+++ b/core/template/mobile/cmd.info.string.default.html
@@ -1,7 +1,7 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="string" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
   <span class="cmdName #hide_name#">#name_display#</span> <strong class="state">#state#</strong>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.find('.state').empty().append(_options.display_value+' #unite#')
       
@@ -17,8 +17,8 @@
           cmd.attr('data-alertlevel','none')
         }
       }
-    }
+    });
     
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
